manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: ghcr.io/GK1023PRO/node-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
